app/assets/stylesheets/pages/_dashboard.scss
.dashboard-container {
  background: image-url('bondcar.jpg');
  background-position: center;
  background-size: cover !important;
  min-height: 100vh;
}

.flex-container {
  display:flex;
}

.left {
  flex: 1 0 50%;
  color: #000;
}

.right {
  flex: 1 0 50%;
  color: #000;

}

.right .dashboard-card, .left .dashboard-card{
  background-color:  #fff;
  margin: 20px;
  padding: 10px;
  border-radius: 10px;
  opacity: 0.9;
}

.car-card, .booking-card {
  background-color: #808080;
  margin: 20px;
  padding: 10px;
  border-radius: 10px;
  color: black;
  max-width: 300px;


}



.btn-twitter {
  color: white;
  border: 1px solid #808080;
  // padding: 15px 20px;
  border-radius: 50px solid #808080;
  padding: 10px 50px;
  margin: 30px  40px;
  font-weight: bolder;
  font-size: 20px;
  background: #808080;
  transition: background 0.3s ease;
}
.btn-twitter:hover {
  background: #3ac162;
  text-decoration: none;
  color: white;
}

.car-card-photo {
  height: 200px;
  width: auto;
}

